# suicrypto_oracle

./: .env  .gitignore  Cargo.toml  README.md  tokens.json
src/: config.rs  lib.rs
src/application/: client_manager.rs  mod.rs
src/domain/: mod.rs  websocket_connection.rs  websocket_handler.rs  websocket_server.rs
src/infraestructure/: api_client.rs
tests/: test_client.rs  test_server.rs
