[package]
name = "suicrypto_oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
